tests/baselines/reference/parserComputedPropertyName3.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName3.ts(1,12): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName3.ts (1 errors) ====
    var v = { [e]() { } };
               ~
!!! error TS2304: Cannot find name 'e'.